--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 5000
-CONNECTION_URL ="mongodb+srv://maheswarimug21cs:DL1iUrAUx2JiQXnW@stack-overflow-clone.q8d9bwt.mongodb.net/test"
+CONNECTION_URL ="mongodb+srv://maheswarimug21cs:l1XTpIV5GKBCc5Q6@signup.alsrg86.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET = Jwt_Secret
 
 
